RESOLVED FIXED30358
[Gtk] ApplicationCacheStorage error while compiling WebKit/gtk/webkit/webkitapplicationcache.cpp
https://bugs.webkit.org/show_bug.cgi?id=30358
Summary [Gtk] ApplicationCacheStorage error while compiling WebKit/gtk/webkit/webkita...
kutagrob
Reported 2009-10-14 06:32:56 PDT
File ApplicationCacheStorage.cpp from http://svn.webkit.org/repository/webkit/trunk/WebCore/loader/appcache/ApplicationCacheStorage.cpp -ApplicationCacheStorage::ApplicationCacheStorage() - : m_maximumSize(INT_MAX) - , m_isMaximumSizeReached(false) -{ -} +ApplicationCacheStorage::ApplicationCacheStorage() +{ + m_maximumSize(INT_MAX); + m_isMaximumSizeReached(false); +} This causes error when net-libs/webkit-gtk-9999 from multilib overlay of gentoo is compiled.
Attachments
build.log from command emerge -1v webkit-gtk (2.43 MB, text/plain)
2009-10-14 11:46 PDT, kutagrob
no flags
environment (134.21 KB, text/plain)
2009-10-14 11:48 PDT, kutagrob
no flags
Patch v1 (1.13 KB, patch)
2009-10-19 04:44 PDT, Jan Alonzo
ap: review+
jmalonzo: commit-queue-
Alexey Proskuryakov
Comment 1 2009-10-14 10:45:48 PDT
If you're seeing errors with trunk, please post compiler output with the errors.
kutagrob
Comment 2 2009-10-14 11:46:03 PDT
Created attachment 41175 [details] build.log from command emerge -1v webkit-gtk
kutagrob
Comment 3 2009-10-14 11:48:19 PDT
Created attachment 41176 [details] environment
Alexey Proskuryakov
Comment 4 2009-10-14 11:52:16 PDT
WebKit/gtk/webkit/webkitapplicationcache.cpp: In function ‘void webkit_application_cache_set_maximum_size(long long unsigned int)’: WebKit/gtk/webkit/webkitapplicationcache.cpp:27: error: ‘cacheStorage’ is not a member of ‘WebCore’ WebKit/gtk/webkit/webkitapplicationcache.cpp:28: error: ‘cacheStorage’ is not a member of ‘WebCore’ WebKit/gtk/webkit/webkitapplicationcache.cpp:29: error: ‘cacheStorage’ is not a member of ‘WebCore’ This doesn't look related to contents of ApplicationCacheStorage.cpp.
kutagrob
Comment 5 2009-10-14 12:54:25 PDT
May be i'm not right. I don't know C++ very good, but after strings I wrote these strings go: ApplicationCacheStorage& cacheStorage() { DEFINE_STATIC_LOCAL(ApplicationCacheStorage, storage, ()); return storage; } On that 'function' it fails to compile: void webkit_application_cache_set_maximum_size(unsigned long long size) { WebCore::cacheStorage().empty(); WebCore::cacheStorage().vacuumDatabaseFile(); WebCore::cacheStorage().setMaximumSize(size); } But after changing lines I get an error, which goes after error above.
Jan Alonzo
Comment 6 2009-10-19 04:44:15 PDT
Created attachment 41412 [details] Patch v1
Alexey Proskuryakov
Comment 7 2009-10-19 08:22:13 PDT
Comment on attachment 41412 [details] Patch v1 r=me (do you need UNUSED_PARAM(size) to avoid unused argument warnings?)
Yong Li
Comment 8 2009-10-19 08:46:02 PDT
Comment on attachment 41412 [details] Patch v1 Let commit bot land it
Jan Alonzo
Comment 9 2009-10-19 11:58:15 PDT
Comment on attachment 41412 [details] Patch v1 Will land it myself to add UNUSED_PARAM as ap suggested.
Jan Alonzo
Comment 10 2009-10-19 12:39:18 PDT
(In reply to comment #9) > (From update of attachment 41412 [details]) > Will land it myself to add UNUSED_PARAM as ap suggested. Landed as http://trac.webkit.org/changeset/49801. Thanks!
Note You need to log in before you can comment on or make changes to this bug.