2009-10-19  Jan Michael Alonzo  <jmalonzo@webkit.org>

Reviewed by Alexey Proskuryakov.

        [Gtk] ApplicationCacheStorage error while compiling WebKit/gtk/webkit/webkitapplicationcache.cpp
        https://bugs.webkit.org/show_bug.cgi?id=30358

        Guard calls to cacheStorage() with ENABLE(OFFLINE_WEB_APPLICATIONS).

        * webkit/webkitapplicationcache.cpp:

Canonical link: https://commits.webkit.org/41255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49801 268f45cc-cd09-0410-ab3c-d52691b4dbfc